Changes in footer

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
       <div class="copyright float-right">
         &copy;
        2018, made by
-        <a href="http://kartikbajaj.xyz" target="_blank">JeTFreaKK</a> and <a href="#" target="_blank">Aman Arora</a>.
+        <a href="http://kartikbajaj.xyz" target="_blank">JeTFreaKK</a> and <a href="http://www.github.com/amanarora9848" target="_blank">Aman Arora</a>.
       </div>
     </div>
   </footer>
