--- a/projects.html
+++ b/projects.html
@@ -252,33 +252,30 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <nav class="float-left">
                 <ul>
                     <li>
-                        <a href="https://www.creative-tim.com">
-              Creative Tim
-          </a>
+                        <a href="#">
+                      IETE
+                    </a>
                     </li>
                     <li>
-                        <a href="https://creative-tim.com/presentation">
-              About Us
-          </a>
+                        <a href="#">
+                      About Us
+                    </a>
                     </li>
                     <li>
-                        <a href="http://blog.creative-tim.com">
-              Blog
-          </a>
+                        <a href="#">
+                      Projects
+                    </a>
                     </li>
                     <li>
-                        <a href="https://www.creative-tim.com/license">
-              Licenses
-          </a>
+                        <a href="#">
+                      Events
+                    </a>
                     </li>
                 </ul>
             </nav>
             <div class="copyright float-right">
-                &copy;
-                <script>
-                    document.write(new Date().getFullYear())
-                </script>, made with <i class="material-icons">favorite</i> by
-                <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a> for a better web.
+                &copy; 2018, made by
+                <a href="http://kartikbajaj.xyz" target="_blank">JeTFreaKK</a> and <a href="http://www.github.com/amanarora9848" target="_blank">Aman Arora</a>.
             </div>
         </div>
     </footer>
