Project page under completion.

--- a/projects.html
+++ b/projects.html
@@ -181,7 +181,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="container">
                 <div class="title">
                     <center>
-                        <h2>Efforts put up by the enthusiasts!</h2>
+                        <h2 class="card-title">Efforts put up by some of the members of our Team</h2>
                     </center>
                 </div><br>
 
@@ -192,22 +192,22 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
                                 <div class="card" style="width:62vh ;">
                                     <div class="card-body">
-                                        <h4 class="card-title">Card title</h4>
-                                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                                        <h4 class="card-title">Arduino Game-Box</h4>
+                                        <p class="card-text">Game development on the Arduino can push both the hardware resources and the developer’s imagination to their potential. made with the help of the Gameduino.</p>
+                                        <p class="card-text"><small class="text-muted">By Anmoljeet, Anshit</small></p>
                                     </div>
-                                    <img class="card-img-bottom" src="https://images.unsplash.com/photo-1517303650219-83c8b1788c4c?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=bd4c162d27ea317ff8c67255e955e3c8&auto=format&fit=crop&w=2691&q=80" alt="Card image cap" style="height:50vh">
+                                    <img class="card-img-bottom" src="assets/img/projects/game.jpeg" alt="Card image cap" style="height:50vh">
                                 </div>
                                 <br></div>
 
                             <div class="col-md-auto ml-auto mr-auto">
                                 <div class="card" style="width:62vh ;">
                                     <div class="card-body">
-                                        <h4 class="card-title">Card title</h4>
-                                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                                        <h4 class="card-title">Hand Gesture controlled Bot</h4>
+                                        <p class="card-text">A bot that follows gestures of your hand. It has circuit that fits on your hand which gives the instructions to the bot according to the hand movements. </p>
+                                        <p class="card-text"><small class="text-muted">By Harbaksh, Dhruva</small></p>
                                     </div>
-                                    <img class="card-img-bottom" src="https://images.unsplash.com/photo-1517303650219-83c8b1788c4c?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=bd4c162d27ea317ff8c67255e955e3c8&auto=format&fit=crop&w=2691&q=80" alt="Card image cap" style="height:50vh">
+                                    <img class="card-img-bottom" src="assets/img/projects/gesturebot.jpg" alt="Card image cap" style="height:50vh">
                                 </div>
                                 <br>
                             </div>
@@ -216,24 +216,24 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <div class="row">
                             <div class="col-md-auto ml-auto mr-auto">
 
-                                <div class="card" style="width:62vh ;">
+                                <div class="card" style="width:62vh;">
                                     <div class="card-body">
-                                        <h4 class="card-title">Card title</h4>
-                                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                                        <h4 class="card-title">Eco-Friendly Cooling Device</h4>
+                                        <p class="card-text">A cooling device using Peltier effect, runs on minimal energy consumption and cool upto 5°C. A fan inside the chamber circulates the cold air, which also cools the chamber.</p>
+                                        <p class="card-text"><small class="text-muted">By Puneet, Pranavi, Piyush</small></p>
                                     </div>
-                                    <img class="card-img-bottom" src="https://images.unsplash.com/photo-1517303650219-83c8b1788c4c?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=bd4c162d27ea317ff8c67255e955e3c8&auto=format&fit=crop&w=2691&q=80" alt="Card image cap" style="height:50vh">
+                                    <img class="card-img-bottom" src="assets/img/projects/IMG-20180820-WA0063.jpg" alt="Card image cap" style="height:50vh">
                                 </div>
                                 <br></div>
 
                             <div class="col-md-auto ml-auto mr-auto">
                                 <div class="card" style="width:62vh ;">
                                     <div class="card-body">
-                                        <h4 class="card-title">Card title</h4>
-                                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                                        <h4 class="card-title">Autonomous Fire-Fighting Bot</h4>
+                                        <p class="card-text">Sensing fire and traversing towards it to extinguish it is the purpose of the robot. it does so using those flame sensors and a water pump, over a servo motor.</p>
+                                        <p class="card-text"><small class="text-muted">By Aman Arora</small></p>
                                     </div>
-                                    <img class="card-img-bottom" src="https://images.unsplash.com/photo-1517303650219-83c8b1788c4c?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=bd4c162d27ea317ff8c67255e955e3c8&auto=format&fit=crop&w=2691&q=80" alt="Card image cap" style="height:50vh">
+                                    <img class="card-img-bottom" src="assets/img/projects/firebot.png" alt="Card image cap" style="height:50vh">
                                 </div>
                                 <br>
                             </div>
