Changes in the hyperlinks

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                             <a href="#" class="dropdown-item">
                                 <i class="material-icons">announcement</i>Announcements
                             </a>
-                            <a href="#" class="dropdown-item">
+                            <a href="./projects.html" class="dropdown-item">
                                 <i class="material-icons">build</i>Projects
                             </a>
                             <a href="#" class="dropdown-item">
