Fixed a bug in teamtest.html page

--- a/projects.html
+++ b/projects.html
@@ -126,7 +126,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             <i class="material-icons">apps</i>Explore
                         </a>
                         <div class="dropdown-menu dropdown-with-icons">
-                            <a href="./team.html" class="dropdown-item">
+                            <a href="./teamtest.html" class="dropdown-item">
                                 <i class="material-icons">layers</i>Team Members
                             </a>
                             <a href="#" class="dropdown-item">
@@ -190,10 +190,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <div class="row">
                             <div class="col-md-auto ml-auto mr-auto">
 
-                                <div class="card" style="width:62vh ;">
+                                <div class="card" style="width:65vh ;">
                                     <div class="card-body">
                                         <h4 class="card-title">Arduino Game-Box</h4>
-                                        <p class="card-text">Game development on the Arduino can push both the hardware resources and the developer’s imagination to their potential. made with the help of the Gameduino.</p>
+                                        <p class="card-text">Game development on the Arduino can push both the hardware resources and the developer’s imagination to their potential. Made with the help of the Gameduino.</p>
                                         <p class="card-text"><small class="text-muted">By Anmoljeet, Anshit</small></p>
                                     </div>
                                     <img class="card-img-bottom" src="assets/img/projects/game.jpeg" alt="Card image cap" style="height:50vh">
@@ -201,7 +201,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <br></div>
 
                             <div class="col-md-auto ml-auto mr-auto">
-                                <div class="card" style="width:62vh ;">
+                                <div class="card" style="width:65vh ;">
                                     <div class="card-body">
                                         <h4 class="card-title">Hand Gesture controlled Bot</h4>
                                         <p class="card-text">A bot that follows gestures of your hand. It has circuit that fits on your hand which gives the instructions to the bot according to the hand movements. </p>
@@ -216,7 +216,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <div class="row">
                             <div class="col-md-auto ml-auto mr-auto">
 
-                                <div class="card" style="width:62vh;">
+                                <div class="card" style="width:65vh;">
                                     <div class="card-body">
                                         <h4 class="card-title">Eco-Friendly Cooling Device</h4>
                                         <p class="card-text">A cooling device using Peltier effect, runs on minimal energy consumption and cool upto 5°C. A fan inside the chamber circulates the cold air, which also cools the chamber.</p>
@@ -227,7 +227,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <br></div>
 
                             <div class="col-md-auto ml-auto mr-auto">
-                                <div class="card" style="width:62vh ;">
+                                <div class="card" style="width:65vh ;">
                                     <div class="card-body">
                                         <h4 class="card-title">Autonomous Fire-Fighting Bot</h4>
                                         <p class="card-text">Sensing fire and traversing towards it to extinguish it is the purpose of the robot. it does so using those flame sensors and a water pump, over a servo motor.</p>
